# meeting-notes-streaming

./: .dep-scan-baseline.json  .gitignore  .gitleaksignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  README.md  justfile  lefthook.yml  pyproject.toml  repo-standards.config.json  requirements.txt  run.py  setup.sh  setup_cloud.sh  setup_local.sh
.github/: actionlint.yaml
.github/workflows/: actions-hygiene.yml  ci.yml  commitlint.yml  contract.yml  python-lint.yml  python-tests.yml  secrets.yml
hyprland/: waybar-module.sh
meeting_notes/: ai_models.py  ai_summarizer.py  app.py  audio_devices.py  config.py  copilot_auth.py  desktop_integration.py  logger.py  migrate_split.py  note_maker.py  ollama_utils.py  parakeet_stream.py  recorder.py  recording_retention.py  recording_session.py  runtime_services.py  settings.py  settings_model.py  summarizer.py  summarizer_factory.py  summarizer_port.py  transcriber.py
scripts/dev/: check-paths  fix  fmt  fmt-check  lint  sync  test  test-fast  typecheck
scripts/guards/: _repo-standards  deps-check-fast  python-slop-baseline.json  python-slop-scan  repo-contract  secrets  secrets-staged
server/: CLAUDE.md  parakeet-stream-client.py  parakeet-stream-realtime.py  parakeet-stream-server.py  pyproject.toml
tests/: conftest.py  test_architecture_ownership.py  test_audio_devices.py  test_config.py  test_desktop_integration.py  test_parakeet_stream.py  test_paths_and_fallbacks.py  test_recording_retention.py  test_recording_session.py  test_runtime_services.py  test_settings_model.py  test_silence_reset.py  test_summarizers.py  test_textual_smoke.py
