[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meeting-notes"
version = "0.2.0"
description = "A local, privacy-focused AI meeting notetaker for Linux with a keyboard-driven TUI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "James Pember" },
]
keywords = ["meeting", "notes", "transcription", "whisper", "tui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Office/Business",
]
dependencies = [
    "textual>=0.50.0",
    "openai-whisper>=20231117",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
openrouter = ["openrouter>=0.1.0"]
copilot = ["openai>=1.0.0"]
cloud = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "openrouter>=0.1.0",
]
all = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "openrouter>=0.1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["venv", "notes", "transcripts", "recordings"]

[tool.ruff.lint]
# Conservative ruleset: real bugs and unused code, no style nitpicks.
# `meeting_notes/` is not new code, so we don't want to fight existing style.
select = ["E9", "F", "B"]
ignore = [
    "F401",  # imported but unused — Textual modules import widgets defensively
    "F403",  # star imports — ditto
    "F841",  # local variable assigned but never used — common in TUI handlers
    "F541",  # f-string without placeholders — pre-existing, harmless
    "B008",  # function call in default argument — used in some Textual patterns
    "B904",  # raise ... from err — pre-existing, would change tracebacks visibly
    "B005",  # strip with multi-character — pre-existing, single occurrence, low risk
]

[project.scripts]
meeting-notes = "meeting_notes.app:run"

[project.urls]
Homepage = "https://github.com/jamespember/meeting-notes"
Repository = "https://github.com/jamespember/meeting-notes"
