[project]
name = "parakeet-streaming"
version = "0.1.0"
description = "Streaming Parakeet ASR server using parakeet-unified-en-0.6b"
requires-python = ">=3.11,<3.13"
dependencies = [
    "nemo_toolkit[asr] @ git+https://github.com/NVIDIA-NeMo/NeMo.git@main",
    "huggingface_hub",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu129", marker = "sys_platform == 'linux'" },
]
torchaudio = [
  { index = "pytorch-cu129", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu129", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
